--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -481,18 +481,22 @@ hr {
   top: 0px;
 }
 
-.top-nav-collapse .navbar-nav .nav-link {
+.top-nav-collapse .navbar-nav a {
   color: #585b60 !important;
   margin-top: 0px !important;
   margin-bottom: 0px !important;
+  padding: 7px 12px;
 }
-
-.top-nav-collapse .navbar-nav .nav-link:hover {
+.navbar-expand-md .navbar-nav a {
+	color: #333;
+	padding: 7px 12px;
+}
+.top-nav-collapse .navbar-nav a:hover {
   cursor: pointer;
   color: #3d60f4 !important;
 }
 
-.top-nav-collapse .navbar-nav li.active a.nav-link {
+.top-nav-collapse .navbar-nav li.active a{
   color: #3d60f4 !important;
 }
 
@@ -503,8 +507,11 @@ hr {
 .menu-bg {
   background: transparent;
 }
-
-.navbar-expand-md .navbar-nav .nav-link i {
+.collapse.navbar-collapse {
+	display: flex;
+	justify-content: end;
+}
+.navbar-expand-md .navbar-nav i {
   font-size: 14px;
   margin-left: 5px;
   vertical-align: middle;
@@ -513,7 +520,7 @@ hr {
   transition: all 0.3s ease-in-out;
 }
 
-.navbar-expand-md .navbar-nav .nav-link {
+.navbar-expand-md .navbar-nav{
   font-family: 'Titillium Web', sans-serif;
   color: #585b60;
   font-weight: 600;
@@ -534,15 +541,15 @@ hr {
   outline: none;
 }
 
-.navbar-expand-md .navbar-nav .active > .nav-link,
-.navbar-expand-md .navbar-nav .nav-link.active,
-.navbar-expand-md .navbar-nav .nav-link.open,
-.navbar-expand-md .navbar-nav .open > .nav-link {
+.navbar-expand-md .navbar-nav .active > a,
+.navbar-expand-md .navbar-nav a.active,
+.navbar-expand-md .navbar-nav a.open,
+.navbar-expand-md .navbar-nav .open > a {
   color: #3d60f4 !important;
 }
 
-.navbar-expand-md .navbar-nav .nav-link:focus,
-.navbar-expand-md .navbar-nav .nav-link:hover {
+.navbar-expand-md .navbar-nav a:focus,
+.navbar-expand-md .navbar-nav a:hover {
   color: #3d60f4 !important;
 }
 
@@ -550,11 +557,11 @@ hr {
   padding: 0;
 }
 
-.navbar li.active a.nav-link {
+.navbar li.active a {
   color: #3d60f4;
 }
 
-.menu-white .navbar-nav .nav-link {
+.menu-white .navbar-nav a {
   color: #fff;
 }
 
